# otto

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  commands.py  event_handlers.py  main.py  pyproject.toml  requirements.txt  utils.py
.do/: app.yaml
.github/workflows/: build-push-deploy.yml  lint.yml  package.yml
blocks/: __init__.py  helpers.py  welcome.py
features/: coverimage.py  coverphoto.py  utils.py
otto/: __init__.py  api.py  app.py  blocks.py  command.py  commands.py  config.py  image.py  utils.py
otto/features/: README.md  cover.py  coverimage.py  database.py  image_cache.py
otto/features/cover/: actions.py  commands.py  utils.py
otto/features/coverimage/: __init__.py  actions.py  blocks.py  commands.py  generator.py  ui.py
otto/features/template/: __init__.py  actions.py  commands.py
otto/persistence/: database.py  redirect_link.py
otto/slack/: __init__.py  action.py  app.py  command.py  message.py
otto/slack/commands/: __init__.py  cover.py  link.py  qr.py
otto/slack/utils/: blocks.py  messages.py
otto/utils/: actions.py  blocks.py  date.py  esn.py  string.py
